# llm_wiki

./: .gitignore  .wiki-config.toml  Readme.md  VERSION.md  pyproject.toml  schema.md
docs/superpowers/plans/: 2026-04-05-llm-wiki.md  2026-04-14-dual-wiki.md
docs/superpowers/specs/: 2026-04-05-llm-wiki-design.md
llm_wiki/: cli.py  config.py  llm.py  semantic.py  sources.py  wiki.py
scripts/: reingest_archive.sh
tests/: conftest.py  test_cli.py  test_config.py  test_llm.py  test_semantic.py  test_sources.py  test_wiki.py
wiki/: Leg Event table (2026‑04‑13).md  index.md  leg-event-schema.md  leg-event.md  leg_event.md  log.md
