[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-wiki"
version = "0.9.3"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "litellm>=1.40",
    "docling>=2.90.0",
    "python-docx>=1.1",
    "youtube-transcript-api>=0.6",
    "httpx>=0.27",
    "readability-lxml>=0.8",
]

[project.scripts]
llm-wiki = "llm_wiki.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["llm_wiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
